# tiago_bartender

./: .gitignore  CMakeLists.txt  README.md  package.xml
tiago_barkeeper_behavior/: CMakeLists.txt  package.xml
tiago_barkeeper_behavior/action/: MenuOrder.action
tiago_barkeeper_behavior/src/: menu_order_node.cpp  simple_idle_node.cpp
tiago_barkeeper_menu/: CMakeLists.txt  package.xml
tiago_barkeeper_menu/data/: calibration.yml  tiagobar.yml
tiago_barkeeper_menu/launch/: calibrate.launch  menu.launch
tiago_barkeeper_menu/src/: tiago_barkeeper_menu.cpp  tiago_barkeeper_menu_calibrate.cpp
tiago_bartender_behavior/: CMakeLists.txt  package.xml
tiago_bartender_behavior/launch/: look_at.launch
tiago_bartender_behavior/src/: look_at_node.cpp  menu_order_node.cpp  simple_idle_node.cpp
tiago_bartender_menu/: CMakeLists.txt  package.xml
tiago_bartender_menu/action/: TakeOrder.action
tiago_bartender_menu/data/: calibration.yml  tiagobar.yml
tiago_bartender_menu/launch/: calibrate.launch  menu.launch  test.launch
tiago_bartender_menu/src/: tiago_bartender_menu.cpp
tiago_bartender_msgs/: CMakeLists.txt  package.xml
tiago_bartender_msgs/action/: DetectBottles.action  DetectGlass.action  FindClosestTarget.action  MoveToTarget.action  Pick.action  Place.action  PlacePick.action  Pour.action  TakeOrder.action  UpdateBottles.action
tiago_bartender_msgs/msg/: ManipulationResult.msg
tiago_bartender_msgs/srv/: LookAt.srv
tiago_bartender_navigation/: CMakeLists.txt  README.md  package.xml
tiago_bartender_navigation/action/: MoveToTarget.action
tiago_bartender_navigation/launch/: move_to_target.launch  navigation.launch
tiago_bartender_navigation/map/: submap_0_old.pgm
tiago_bartender_navigation/src/: move_to_target_node.cpp
tiago_bartender_speech/: CMakeLists.txt  package.xml
tiago_bartender_speech/action/: .BartenderSpeech.action.swp  BartenderSpeech.action
tiago_bartender_speech/audio_files/: audio_transcript
tiago_bartender_speech/config/: audio_map.yaml
tiago_bartender_speech/launch/: play_file.launch
tiago_bartender_speech/src/: play_file_node.cpp
tiago_bartender_stackmachine/: CMakeLists.txt  package.xml  setup.py
tiago_bartender_stackmachine/config/: config.yaml
tiago_bartender_stackmachine/launch/: order_test.launch  pick_test.launch  place_test.launch  pour_test.launch  stackmachine.launch  without_order_test.launch
tiago_bartender_stackmachine/scripts/: order_test.py  pick_test.py  place_test.py  pour_test.py  stackmachine.py  without_order_test.py
tiago_bartender_state_machine/: CMakeLists.txt  package.xml
tiago_bartender_state_machine/config/: .recipes.yaml.swp  recipes.yaml
tiago_bartender_state_machine/launch/: state_machine.launch
tiago_bartender_state_machine/src/: state_machine_node.cpp
tiago_bartender_state_machine/stub_scripts/: menu_selection.sh  person_detection.sh
tiago_bartender_world/: CMakeLists.txt  package.xml
tiago_bartender_world/launch/: bar_crowded.launch  bar_demo.launch  bar_tables.launch  bottle_demo.launch  bottle_test.launch  init_planning_scene.launch  spawn_bottles.launch  spawn_cancel_card.launch  spawn_close_gripper_card.launch  spawn_man_black_guy.launch  spawn_man_hands_in_pockets.launch  spawn_man_laptopbag.launch  spawn_man_poloshirt.launch  spawn_man_suit.launch  spawn_menu_card.launch  spawn_open_gripper_card.launch  spawn_order_coca_cola_card.launch  spawn_order_tequila_sunrise_card.launch  spawn_pause_card.launch  spawn_phd.launch  spawn_postdoc.launch  spawn_professor.launch  spawn_woman_black_miniskirt.launch  spawn_woman_ordering.launch  spawn_woman_pink_blouse.launch  spawn_woman_pointing.launch  spawn_woman_red_dress.launch  spawn_xacro.launch  test_init_planning_scene.launch  tiago_cards_rviz_only.launch  tiago_cards_rviz_only.rviz
tiago_bartender_world/meshes/: Cwom0010_001.tif  bar_stool.dae  bar_stool.scad  bartresen.dae  bartresen_binary.stl  bottle_2_coke.dae  bottle_2_pepsi.blend  bottle_2_pepsi.blend1  bottle_2_pepsi.dae  bottle_ascii.stl  bottle_binary.stl  bottle_coke.blend  bottle_coke.blend1  bottle_coke.dae  bottle_fanta.blend  bottle_fanta.blend1  bottle_fanta.dae  bottle_pepsi.blend1  bottle_pepsi.dae  cc_cancel.dae  cc_cancel_all.dae  cc_cancel_all_atag_406.dae  cc_cancel_atag_405.dae  cc_card.scad  cc_card.stl  cc_close_gripper.dae  cc_close_gripper_atag_415.dae  cc_come_here.dae  cc_come_here_atag_426.dae  cc_continue.dae  cc_continue_atag_404.dae  cc_drive_forward.dae  cc_drive_forward_atag_425.dae  cc_drive_home.dae  cc_drive_home_atag_421.dae  cc_drive_reverse.dae  cc_drive_reverse_atag_424.dae  cc_drive_to_docking_station.dae  cc_drive_to_docking_station_atag_420.dae  cc_emergency_stop.dae  (+98 more)
tiago_bartender_world/misc/: convert_command_cards_to_textures.sh  make_command_card_collada.sh
tiago_bartender_world/robots/: bottle_2_coke.xacro  bottle_2_fanta.xacro  bottle_2_pepsi.xacro  bottle_coke.xacro  bottle_fanta.xacro  bottle_pepsi.xacro  orange_bottle.xacro  red_bottle.xacro  test_bottle.xacro  yellow_bottle.xacro  yellow_glass.xacro
tiago_bartender_world/src/: dummy_planning_scene_init.cpp  planning_scene_init.cpp
tiago_bartender_world/urdf/: apriltag_bottle.xacro  bar_corner.xacro  bar_counter.xacro  bar_cupboard.xacro  bar_demo.xacro  bar_demo_tables.xacro  bar_stool.xacro  bar_table_140x70.xacro  bar_table_160x80.xacro  bar_table_leg_2x2x73.xacro  bottle.xacro  bottle_demo.xacro  command_card_cancel.xacro  command_card_cancel_all.xacro  command_card_close_gripper.xacro  command_card_collada.xacro  command_card_continue.xacro  command_card_move_torso_down.xacro  command_card_move_torso_up.xacro  command_card_open_gripper.xacro  command_card_order_coca_cola.xacro  command_card_order_sparkling_water.xacro  command_card_order_still_water.xacro  command_card_order_tequila_sunrise.xacro  command_card_pause.xacro  command_card_tuck_arm.xacro  easy_grasp_bottle.xacro  ikea_glass.xacro  man_black_guy.urdf  man_hands_in_pockets.urdf  man_laptopbag.urdf  man_poloshirt.urdf  man_suit.urdf  phd.urdf  postdoc.urdf  professor.urdf  tiago_cards_demo.xacro  (+5 more)
(+152 files in other folders)
