<?xml version="1.0"?>
<package format="2">
  <name>tiago_bartender_behavior</name>
  <version>0.0.0</version>
  <description>The tiago_bartender_behavior package</description>

  <maintainer email="pal@todo.todo">pal</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>tiago_bartender_msgs</build_depend>
  <build_depend>move_base_msgs</build_depend>
  <build_depend>pal_common_msgs</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_generation</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>
  <exec_depend>tiago_bartender_msgs</exec_depend>
  <exec_depend>pal_common_msgs</exec_depend>
</package>
