<?xml version="1.0"?>
<package>
  <name>tiago_bartender_navigation</name>
  <version>0.0.0</version>
  <description>The tiago_bartender_navigation package provides launch files 
               for navigation for our robot bartender demo,
               first to be shown with PAL robotics Tiago at IROS-2018 in Madrid.
 e</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <maintainer email="hendrich@informatik.uni-hamburg.de">Norman Hendrich</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>urdf</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>

  <run_depend>tf</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>tams_apriltags</run_depend>
  <run_depend>message_generation</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>moveit_ros_planning_interface</run_depend>

</package>
