<?xml version="1.0"?>
<package format="2">
  <name>tiago_bartender_speech</name>
  <version>0.0.0</version>
  <description>The tiago_bartender_speech package</description>

  <maintainer email="2scholz@informatik.uni-hamburg.de">Benjamin Scholz</maintainer>

  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>sound_play</build_depend>
  <build_depend>tiago_bartender_msgs</build_depend>

  <build_depend>roslib</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>roslib</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>
  <exec_depend>tiago_bartender_msgs</exec_depend>

</package>
