<?xml version="1.0"?>
<package format="2">
  <name>tiago_bartender_stackmachine</name>
  <version>0.0.0</version>
  <description>The tiago_bartender_stackmachine package</description>

  <maintainer email="2scholz@informatik.uni-hamburg.de">Benjamin Scholz</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>bitbots_stackmachine</build_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>actionlib</build_export_depend>
  <build_export_depend>bitbots_stackmachine</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>bitbots_stackmachine</exec_depend>
  <exec_depend>rospy</exec_depend>
</package>
