<?xml version="1.0"?>
<package format="2">
  <name>tiago_bartender_state_machine</name>
  <version>0.0.0</version>
  <description>The tiago_bartender_state_machine package</description>

  <maintainer email="todo@todo.todo">Benjamin Scholz</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tiago_bartender_navigation</build_depend>
  <build_depend>tiago_bartender_behavior</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tiago_bartender_navigation</exec_depend>
  <exec_depend>tiago_bartender_behavior</exec_depend>
</package>
