<?xml version="1.0"?>
<package>
  <name>tiago_bartender_world</name>
  <version>0.0.0</version>
  <description>The tiago_bartender_world package provides Gazebo worlds, simulation models,
               and launch files for our robot bartender demo,
               first to be shown with PAL robotics Tiago at IROS-2018 in Madrid.
 e</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <maintainer email="hendrich@informatik.uni-hamburg.de">Norman Hendrich</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>urdf</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>

  <run_depend>tf</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>gazebo_ros</run_depend>  
  <run_depend>tams_apriltags</run_depend>  
  <run_depend>moveit_ros_planning_interface</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <gazebo_ros gazebo_media_path="${prefix}" />  <!-- for standalone Gazebo, ROS Hydro and up -->

    <gazebo gazebo_media_path="${prefix}" />
    <gazebo plugin_path="${prefix}/lib" />
    <rviz rviz_media_path="${prefix}/Media/materials/scripts:${prefix}/Media/textures"/>

    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
